Fixed Glitchy scrollbar

--- a/Halo 2.theme.css
+++ b/Halo 2.theme.css
@@ -7,7 +7,7 @@
  \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\/////////////////////////////////////
 */
 /* Version Displayed */
-:root {--version-content: "1.5.8";}
+:root {--version-content: "1.5.9";}
 
 body:after {
     content: "Current Version: v" var(--version-content);
@@ -1943,10 +1943,11 @@ background:transparent!important
 
 /*Scroll Color */
 .scroller-wrap .scroller::-webkit-scrollbar-thumb {
-	width: 6px;
+	background-color:rgba(225,225,225,0.2)!important;
+    border: transparent;
+    width: 6px;
 	display: initial;
 	border-radius: 0;!important;
-	background-color:rgba(255,255,255,0.4)!important;
 }
 
 
@@ -2216,7 +2217,7 @@ border-bottom:6px solid #597859
 }
 
 .guilds-wrapper {
-    width: 75px;
+    width: 74px;
 }
 
 .guilds li {
